fabrik.css; remove repeat data padding to fix wrong alignment of single and multiple repeat data. Do styling (if necessary) in list template css. https://fabrikar.com/forums/index.php?threads/alignment-of-repeat-groups-in-a-list-view.54724/

--- a/media/com_fabrik/css/fabrik.css
+++ b/media/com_fabrik/css/fabrik.css
@@ -566,13 +566,11 @@ table.fabrikList .oddRow1 {
 
 td.repeat-merge,
 td.repeat-reduce {
-	padding: 0 !important;
 	vertical-align: top;
 }
 
 td.repeat-merge ul.fabrikRepeatData li,
 td.repeat-reduce ul.fabrikRepeatData li {
-	padding: 5px !important;
 	border-bottom: 1px solid #CCCCCC;
 }
 /*********************************************************/
